third_party/move/move-compiler/tests/move_check/expansion/access_specifier_not_supported.exp
error[E01012]: invalid access specifier
   ┌─ tests/move_check/expansion/access_specifier_not_supported.move:14:23
   │
14 │     fun f4() acquires S(*) {
   │                       ^^^^ compiler version 1 only supports simple 'acquires <resource_name>' clauses

error[E01012]: invalid access specifier
   ┌─ tests/move_check/expansion/access_specifier_not_supported.move:23:23
   │
23 │     fun f7() acquires *(*) {
   │                       ^^^^ compiler version 1 only supports simple 'acquires <resource_name>' clauses

error[E01012]: invalid access specifier
   ┌─ tests/move_check/expansion/access_specifier_not_supported.move:26:23
   │
26 │     fun f8() acquires *(0x42) {
   │                       ^^^^^^^ compiler version 1 only supports simple 'acquires <resource_name>' clauses

error[E01012]: invalid access specifier
   ┌─ tests/move_check/expansion/access_specifier_not_supported.move:29:34
   │
29 │     fun f9(_a: address) acquires *(_a) {
   │                                  ^^^^^ compiler version 1 only supports simple 'acquires <resource_name>' clauses

